--- a/index.ipynb
+++ b/index.ipynb
@@ -51,6 +51,7 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
+    "    first = 'M'\n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
    ]
