Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,8 @@
     "class Driver:\n",
     "    first = 'Matthew'\n",
     "    last = 'Mitchell'\n",
-    "    \n",
+    "    miles_driven = 100\n",
+    "    rating = \n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
    ]
