Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "    first = 'Matthew'\n",
     "    last = 'Mitchell'\n",
     "    miles_driven = 100\n",
-    "    rating = \n",
+    "    rating = 4.9\n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
    ]
