--- a/index.ipynb
+++ b/index.ipynb
@@ -74,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create an instance with the above 4 attributes and then call the greet_passenger method"
+    "#Create an instance with the above 4 attributes and then call the greet_passenger method\n",
+    "driver = Driver()"
    ]
   },
   {
