--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
-    "    \n",
+    "    def __init__\n",
     "    first = 'Matthew'\n",
     "    last = 'Mitchell'\n",
     "    miles_driven = 100\n",
