Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -51,11 +51,11 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
-    "    def __init__\n",
-    "    first = 'Matthew'\n",
-    "    last = 'Mitchell'\n",
-    "    miles_driven = 100\n",
-    "    rating = 4.9\n",
+    "    def __init__():\n",
+    "        sfirst = 'Matthew'\n",
+    "        last = 'Mitchell'\n",
+    "        miles_driven = 100\n",
+    "        rating = 4.9\n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
    ]
