--- a/index.ipynb
+++ b/index.ipynb
@@ -51,10 +51,10 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
-    "    def __init__():\n",
-    "        sfirst = 'Matthew'\n",
-    "        last = 'Mitchell'\n",
-    "        miles_driven = 100\n",
+    "    def __init__(self):\n",
+    "        self.first = 'Matthew'\n",
+    "        self.last = 'Mitchell'\n",
+    "        self.miles_driven = 100\n",
     "        rating = 4.9\n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
