Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "        self.first = 'Matthew'\n",
     "        self.last = 'Mitchell'\n",
     "        self.miles_driven = 100\n",
-    "        rating = 4.9\n",
+    "        self.rating = 4.9\n",
     "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {first} {last} \""
    ]
@@ -80,7 +80,8 @@
    "outputs": [],
    "source": [
     "#Create an instance with the above 4 attributes and then call the greet_passenger method\n",
-    "driver = Driver()"
+    "driver = Driver()\n",
+    "driv"
    ]
   },
   {
