Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger:\n",
+    "    def __init__(self):\n",
+    "        self.first = 'Matthew'\n",
+    "        self.last = 'Mitchell'\n",
+    "        self.miles_driven = 100\n",
+    "        self.rating = 4.9\n",
+    "    def greet_passenger(self):\n",
+    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last} \""
    ]
   },
   {
