Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,11 @@
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger:\n",
+    "    def __init__(self, first, last):\n",
+    "        self.first = first\n",
+    "        self.last = 'Mitchell'\n",
+    "        self.miles_driven = 100\n",
+    "        self.rating = 4.9\n",
     "    def greet_passenger(self):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last} \""
    ]
