--- a/index.ipynb
+++ b/index.ipynb
@@ -112,10 +112,9 @@
     "class Passenger:\n",
     "    def __init__(self, first, last):\n",
     "        self.first = first\n",
-    "        self.last = 'Mitchell'\n",
-    "        self.miles_driven = 100\n",
-    "        self.rating = 4.9\n",
-    "    def greet_passenger(self):\n",
+    "        self.last = last\n",
+    "        \n",
+    "    def greet_passenger():\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last} \""
    ]
   },
