--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        \n",
-    "    def greet_passenger():\n",
+    "    def greet_passenger(yell_name):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last} \""
    ]
   },
