--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     "        self.last = last\n",
     "        \n",
     "    def greet_passenger(yell_name):\n",
-    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last} \""
+    "        return f\"{self.first} {self.last} \""
    ]
   },
   {
