--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method\n",
-    "Dan = Passenger(\"Daniel\")"
+    "Dan = Passenger(\"Daniel\", \"Albert\")\n",
+    "Dan."
    ]
   },
   {
