Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        \n",
-    "    def greet_passenger(yell_name):\n",
+    "    def (yell_name):\n",
     "        return f\"{self.first} {self.last} \""
    ]
   },
