--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-3525fde5405d>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3525fde5405d>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    def yell_name(:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger:\n",
@@ -114,7 +123,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        \n",
-    "    def (yell_name):\n",
+    "    def yell_name(:\n",
     "        return f\"{self.first} {self.last} \""
    ]
   },
