Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,18 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-3525fde5405d>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3525fde5405d>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    def yell_name(:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger:\n",
@@ -123,7 +114,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        \n",
-    "    def yell_name(:\n",
+    "    def yell_name(self):\n",
     "        return f\"{self.first} {self.last} \""
    ]
   },
@@ -136,13 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-be82ef15a595>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-be82ef15a595>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    Dan.\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method\n",
     "Dan = Passenger(\"Daniel\", \"Albert\")\n",
-    "Dan."
+    "Dan"
    ]
   },
   {
