--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
     "        self.last = last\n",
     "        \n",
     "    def yell_name(self):\n",
-    "        return f\"{self.first} {self.last} \""
+    "        return f\"{self.first.upper()} {self.last.upper()} \""
    ]
   },
   {
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Daniel.upper() Albert '"
+       "'DANIEL ALBERT '"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
